# Hotspot

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  template.md  wb.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/wifi_extender/core/: ap_service.py  bridge_service.py  connection_manager.py  interface_manager.py  wifi_detector.py
src/wifi_extender/gui/: main.py  main_window.py
src/wifi_extender/service/: __init__.py  daemon.py
system/: install.sh  wifi-extender-service  wifi-extender.service
tests/: test_ap_service.py  test_bridge_service.py  test_connection_manager.py  test_daemon.py  test_main_window.py  test_wifi_detector.py
