[tool.poetry]
name = "wifi-extender"
version = "0.1.0"
description = "A WiFi extender application for Ubuntu using single-card solution"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "wifi_extender", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.1"
psutil = "^5.9.8"
netifaces = "^0.11.0"
python-daemon = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wifi-extender = "wifi_extender.gui.main:main"
